style and corrected/validated visibility of title and checkbox.

--- a/emergency-boba-finder/src/components/UserInformation.css
+++ b/emergency-boba-finder/src/components/UserInformation.css
@@ -13,5 +13,6 @@
 
 .description {
     font-size: 24px;
+    padding-top: 5px;
     margin-bottom: var(--marginBottomShared);
 }
